2008-09-17  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/index.xml, doc/en/Mono.Rocks/Maybe.xml,
	  doc/en/Mono.Rocks/MaybeRocks.xml: Document Maybe & MaybeRocks.

2008-09-16  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/Mono.Rocks/Sequence.xml: Document Sequence.

2008-09-15  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Document StringRocks.

2008-09-14  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Remove Mono.Rocks/Cons.cs 
	  from the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Remove
	  Tests/Mono.Rocks.Tests/ConsTest.cs from the build.
	* doc/en/**: Flush Cons<T> removal.

2008-09-12  Jonathan Pryor  <jpryor@novell.com>

	* mktuples: Add .Match() method, which is a "nicer" version of
	  ObjectRocks.Match() for use with tuples.
	* doc/fixup.sed: Allow .Match() documentation to be imported.
	* doc/en/**: Flush.

2008-09-11  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-10  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* gendarm.ignore: Add additional members to ignore.

2008-09-07  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Cons.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/ConsTest.cs to the build.
	* doc/en/**: Flush updated types.

2008-09-06  Jonathan Pryor  <jpryor@novell.com>

	* Mono.Rocks.dll.sources, Mono.Rocks.csproj: Add Mono.Rocks/Maybe.cs 
	  to the build.
	* Mono.Rocks.Tests.dll.sources, Tests/Mono.Rocks.Tests.csproj: Add
	  Tests/Mono.Rocks.Tests/MaybeTest.cs to the build.

2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush TextReaderRocks & some StringRocks docs.

2008-09-04  Jonathan Pryor  <jpryor@novell.com>

	* doc/en/**: Flush.
	* Generator.pm: Fix GetDocAction(), GetDocFunc() to pass the correct number